# rust-vanitymnem

./: Cargo.toml  DERIVE.md  README.md  VANITYMNEM.md
src/: derive.rs  vanitymnem.rs
