[package]
name = "vanitymnem"
version = "0.0.1"
authors = ["Valerio Vaccaro <rust@valeriovaccaro.it>"]
edition = "2018"
license = "MIT"
homepage = "https://vanitymnem.com"
repository = "https://github.com/valerio-vaccaro/rust-vanitymnem"
documentation = "https://github.com/valerio-vaccaro/rust-vanitymnem"
description = "Create a valid Bitcoin mnemonic with a vanity address in a specific derivation."
keywords = ["Bitcoin", "Mnemonic"]
readme = "README.md"

[[bin]]
name = "vanitymnem"
path = "src/vanitymnem.rs"

[[bin]]
name = "derive"
path = "src/derive.rs"

[dependencies]
bitcoin = "=0.26.0"
elements = "=0.24.1"
bip39 = "=2.0.0"
regex = "=1.10.3"
qrcode = "=0.13.0"
clap = "=2.33.3"
colored = "=2.1.0"
rand = "=0.8.5"
